<resources>
    <string name="app_name">Measurement Converter</string>

    <string name="title_activity_converter">Tic-Tac-Toe</string>


    <string name="title_activity_mile_to_kilo">Miles to Kilometers</string>
    <string name="title_activity_kilo_to_mile">Kilometers to Miles</string>
    <string name="title_activity_inch_to_cent">Inches to Centimeters</string>
    <string name="title_activity_cent_to_inch">Centimeters to Inches</string>

    <string name="menu_settings">Settings</string>
    <string name="menu_about">About</string>

    <string name="title_activity_settings">Settings</string>

    <string name="title_activity_about">About</string>
    <string name="about">Tic-Tac-Toe by Aleksandar Kljaic Spring 2020</string>

    <string name="player_one_name_title">Player One Settings</string>
    <string name="player_one_name_summary">Sets name for Player One.</string>

    <string name="player_two_name_title">Player Two Settings</string>
    <string name="player_two_name_summary">Sets name for Player Two.</string>

    <string name="new_game">Reset</string>
    <string name="apply_button">Apply</string>
    <string name="reset_button">Reset</string>

    <string name="tile_one_name"> </string>
    <string name="tile_two_name"> </string>
    <string name="tile_three_name"> </string>
    <string name="tile_four_name"> </string>
    <string name="tile_five_name"> </string>
    <string name="tile_six_name"> </string>
    <string name="tile_seven_name"> </string>
    <string name="tile_eight_name"> </string>
    <string name="tile_nine_name"> </string>

    <string name="namePlayerOne">John Doe 2</string>
    <string name="namePlayerTwo">John Doe 3</string>

    <string name="game_messages_label"> </string>
    <string name="versus">vs.</string>


    <string name="MilesTitle">Miles</string>
    <string name="KilometersTitle">Kilometers</string>
    <string name="InchTitle">Inches</string>
    <string name="CentTitle">Centimeters</string>

    <string name="MilesValue"> </string>
    <string name="KilometersValue"> </string>
    <string name="InchValue"> </string>
    <string name="CentValue"> </string>

    <string name="total_kilometers"> </string>
    <string name="total_miles"> </string>
    <string name="total_inches"> </string>
    <string name="total_centimeters"> </string>

    <string name="ConversionTitle">Conversion</string>
    <string-array name="split_array">
        <item>Choose a selection:</item>
        <item>Miles to Kilometers</item>
        <item>Kilometers to Miles</item>
        <item>Inches to Centimeters</item>
        <item>Centimeters to Inches</item>
    </string-array>
</resources>
