<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".KiloToMile" >

    <!-- Banner -->
    <ImageView
        android:id="@+id/banner"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:src="@drawable/measurement_converter" />

    <!-- Conversion-->
    <TextView
        android:id="@+id/ConversionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/banner"
        android:layout_marginTop="20dp"
        android:gravity="top|center_vertical|center_horizontal"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/ConversionTitle"
        android:textStyle="bold"
        android:textSize="20sp" />

    <!-- Spinner-->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/splitSpinner"
        android:gravity="top|center_vertical|center_horizontal"
        android:layout_alignBaseline="@+id/ConversionTextView"
        android:layout_toRightOf="@id/ConversionTextView" />

    <!-- Miles-->
    <TextView
        android:id="@+id/MilesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/KilometersTextView"
        android:layout_marginTop="20dp"
        android:gravity="top|center_vertical|center_horizontal"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/MilesTitle"
        android:textStyle="bold"
        android:textSize="20sp" />

    <!-- Kilometers-->
    <TextView
        android:id="@+id/KilometersTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConversionTextView"
        android:layout_marginTop="20dp"
        android:gravity="top|center_vertical|center_horizontal"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/KilometersTitle"
        android:textStyle="bold"
        android:textSize="20sp" />

    <!--Kilometers -->
    <EditText
        android:id="@+id/KilometersValueEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/KilometersTextView"
        android:layout_toRightOf="@+id/KilometersTextView"
        android:ems="8"
        android:inputType="numberDecimal"
        android:text="@string/KilometersValue"
        android:textSize="20sp" />

    <!-- Total Miles -->
    <TextView
        android:id="@+id/totalMiles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/MilesTextView"
        android:layout_toRightOf="@+id/MilesTextView"
        android:padding="5dp"
        android:ems="8"
        android:text="@string/total_miles"
        android:textSize="20sp" />

    <!-- Apply Button -->
    <Button
        android:id="@+id/applyButton"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_below="@+id/MilesTextView"
        android:text="@string/apply_button"
        android:textSize="20sp" />

    <!-- Reset Button-->
    <Button
        android:id="@+id/resetButton"
        android:layout_width="175dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginRight="20dp"
        android:layout_below="@+id/totalMiles"
        android:layout_toRightOf="@+id/applyButton"
        android:text="@string/reset_button"
        android:textSize="20sp" />

</RelativeLayout>