<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <!-- Conversion-->
    <TextView
        android:id="@+id/ConversionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/newGameButton"
        android:layout_marginTop="20dp"
        android:gravity="top|center_vertical|center_horizontal"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/ConversionTitle"
        android:textStyle="bold"
        android:textSize="20sp" />

    <!-- Spinner-->
    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/splitSpinner"
        android:gravity="top|center_vertical|center_horizontal"
        android:layout_alignBaseline="@+id/ConversionTextView"
        android:layout_toRightOf="@id/ConversionTextView" />

    <!-- Miles-->
    <TextView
        android:id="@+id/MilesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ConversionTextView"
        android:layout_marginTop="20dp"
        android:gravity="top|center_vertical|center_horizontal"
        android:padding="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:text="@string/MilesTitle"
        android:textStyle="bold"
        android:textSize="20sp"
        android:visibility="gone"/>

    <!-- New Game-->
    <Button
        android:id="@+id/newGameButton"
        android:layout_width="324dp"
        android:layout_height="75dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:text="@string/new_game"
        android:textSize="20sp" />

</RelativeLayout>